--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,7 +3,7 @@ name: Publish SDK
 on:
   push:
     tags:
-      - "v*.*.*" # Trigger only when version tags like v0.1.0 are pushed
+      - "v*.*.*"
 
 permissions:
   contents: read
@@ -24,6 +24,11 @@ jobs:
           node-version: 20
           registry-url: https://npm.pkg.github.com/
           scope: "@nexits"
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 8
 
       - name: Install dependencies
         run: pnpm install
