--- a/package.json
+++ b/package.json
@@ -15,13 +15,20 @@
     "dev": "tsc --watch",
     "lint": "eslint",
     "format": "prettier --check .",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "test": "vitest",
+    "test:watch": "vitest --watch"
+
   },
   "dependencies": {
+    "@react-email/render": "^1.1.0",
     "zod": "^3.21.4"
   },
   "devDependencies": {
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "vite": "^6.3.4",
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^3.1.2"
   },
   "prettier": "@nexits/prettier-config"
 }
