--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,9 @@
     "forceConsistentCasingInFileNames": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "types": ["vitest/globals"]
+
   },
   "include": ["src"],
   "exclude": ["node_modules", "dist"]
