Fix : package name from @nexits to @nexitsSaS

--- a/.npmrc
+++ b/.npmrc
@@ -1,7 +1,4 @@
 # @nexits:registry=https://npm.pkg.github.com/
 # //npm.pkg.github.com/:_authToken=${NPM_TOKEN}
-@nexits:registry=https://npm.pkg.github.com/
-<<<<<<< Updated upstream
+@nexitsSaS:registry=https://npm.pkg.github.com/
 //npm.pkg.github.com/:_authToken=${NODE_AUTH_TOKEN}
-=======
->>>>>>> Stashed changes
