--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,7 +23,7 @@ jobs:
         with:
           node-version: 20
           registry-url: https://npm.pkg.github.com/
-          scope: "@nexitsSaS"
+          scope: "@nexitssas"
 
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
