--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,4 @@
 # @nexits:registry=https://npm.pkg.github.com/
 # //npm.pkg.github.com/:_authToken=${NPM_TOKEN}
-@nexitsSaS:registry=https://npm.pkg.github.com/
+@nexitssas:registry=https://npm.pkg.github.com/
 //npm.pkg.github.com/:_authToken=${NODE_AUTH_TOKEN}
