--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,3 @@
+## @nexits:registry=https://npm.pkg.github.com/
 @nexitssas:registry=https://npm.pkg.github.com/
 //npm.pkg.github.com/:_authToken=${NODE_AUTH_TOKEN}
