--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@nexits/mailer-sdk",
+  "name": "@nexitssas/mailer-sdk",
   "private": false,
   "version": "0.1.3",
   "license": "MIT",
