refactor(sdk): decouple Raven client, centralize API logic, and added zod validators

--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@react-email/render": "^1.0.5",
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@types/html-to-text": "^9.0.4",
+    "@types/react": "19.1.2",
     "typescript": "^5.3.3"
   },
   "prettier": "@nexits/prettier-config"
