--- a/package.json
+++ b/package.json
@@ -18,18 +18,18 @@
     "typecheck": "tsc --noEmit",
     "test": "vitest",
     "test:watch": "vitest --watch"
-
   },
   "dependencies": {
+    "react": "^19.1.1",
     "zod": "^3.21.4"
   },
   "devDependencies": {
-    "vite": "^6.3.4",
-    "vite-tsconfig-paths": "^5.1.4",
-    "vitest": "^3.1.2",
     "@types/html-to-text": "^9.0.4",
     "@types/react": "19.1.2",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "vite": "^6.3.4",
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^3.1.2"
   },
   "peerDependencies": {
     "@react-email/render": "^1.1.0"
