--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "exports": {
     ".": {
-      "types": "./dist/index.ts",
+      "types": "./dist/index.d.ts",
       "default": "./src/index.ts"
     }
   },
@@ -25,9 +25,10 @@
   },
   "devDependencies": {
     "@types/html-to-text": "^9.0.4",
+    "@types/node": "^24.3.1",
     "@types/react": "19.1.2",
     "typescript": "^5.3.3",
-    "vite": "^6.3.4",
+    "vite": "^7.1.4",
     "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.1.2"
   },
